<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spyfi</string>
    <string name="app_version">2.1.1</string>
    <string name="app_author">Nic Raboy</string>
    <string name="app_site">http://www.nraboy.com</string>
    <string name="app_support">http://www.nraboy.com/index/contact</string>
    <string name="app_twitter">https://www.twitter.com/nraboy</string>
    <string name="app_store">https://play.google.com/store/apps/details?id=com.nraboy.spyfi</string>
    
    <string name="activity_add">Add Camera</string>
    <string name="activity_update">Update Camera</string>
    <string name="activity_settings">Settings</string>
    
    <string name="hint_label">Label</string>
    <string name="hint_host">Host</string>
    <string name="hint_port">Port</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_add_camera">Add Camera</string>
    
    <string name="preference_preference">Preferences</string>
    <string name="preference_analytics">Analytics</string>
    <string name="preference_analytics_summary">Allow Spyfi to collect anonymous metric information</string>
    <string name="preference_about">About</string>
    <string name="preference_rate">Rate Spyfi</string>
    <string name="preference_support">Support</string>
    <string name="preference_contact">Contact Us</string>
    <string name="preference_contact_summary">Report a bug or send a suggestion</string>
    <string name="preference_getsocial">Get Social</string>
    <string name="preference_twitter">Follow us on Twitter</string>
    
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="button_rate_now">Rate Now</string>
    <string name="button_dont_remind">Never Show Again</string>
    
    <string name="dialog_title_action">Perform An Action</string>
    <string name="dialog_title_please_rate">Rate Spyfi</string>
    
    <string name="dialog_message_version">Version</string>
    <string name="dialog_message_incomplete">Please Make Sure All Fields Are Complete!</string>
    <string name="dialog_message_please_rate">Please support Spyfi by providing a rating or review of your experience.</string>
    <string name="dialog_message_stream_error">Camera failed to load. Please make sure all connection information is correct and the camera is set up correctly.</string>
</resources>
