<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/preference_preference"
        android:key="pref_key_preference">
        <CheckBoxPreference
            android:key="pref_key_analytics"
            android:title="@string/preference_analytics" 
            android:summary="@string/preference_analytics_summary" 
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/preference_about"
        android:key="pref_key_about">
        <Preference 
            android:key="pref_key_app_version"
            android:title="Version" />
        <Preference 
            android:key="pref_key_app_rate"
            android:title="@string/preference_rate" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/preference_support"
        android:key="pref_key_support">
        <Preference 
            android:key="pref_key_support_contact"
            android:title="@string/preference_contact" 
            android:summary="@string/preference_contact_summary" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/preference_getsocial"
        android:key="pref_key_social">
        <Preference 
            android:key="pref_key_app_twitter"
            android:title="@string/preference_twitter" />
    </PreferenceCategory>
</PreferenceScreen>
